// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroCategories should fire event when click on the categories 1`] = `
<View
  testID="heroCategory"
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        Object {
          "textAlign": "left",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {
          "marginBottom": 9,
        },
      ]
    }
  >
    Test
  </Text>
  <View>
    <RCTScrollView
      data={
        Array [
          Array [
            Object {
              "image": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
              "key": "test",
              "title": "test",
            },
            Object {
              "image": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
              "key": "test2",
              "title": "test",
            },
          ],
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={true}
      initialNumToRender={4}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="heroCategoriesList"
    >
      <View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              null,
            ]
          }
        >
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Object {
                    "borderRadius": 12,
                    "marginRight": 12,
                    "padding": 4,
                  },
                ]
              }
              testID="heroItemtest"
            >
              <View>
                <Image
                  source={
                    Object {
                      "height": 97,
                      "uri": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
                      "width": 97,
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 48.5,
                    }
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 12,
                        "fontWeight": "500",
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Object {
                        "writingDirection": "ltr",
                      },
                      Object {
                        "fontWeight": "600",
                        "marginBottom": 12,
                        "marginTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  test
                </Text>
              </View>
            </View>
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Object {
                    "borderRadius": 12,
                    "marginRight": 12,
                    "padding": 4,
                  },
                ]
              }
              testID="heroItemtest2"
            >
              <View>
                <Image
                  source={
                    Object {
                      "height": 97,
                      "uri": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
                      "width": 97,
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 48.5,
                    }
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 12,
                        "fontWeight": "500",
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Object {
                        "writingDirection": "ltr",
                      },
                      Object {
                        "fontWeight": "600",
                        "marginBottom": 12,
                        "marginTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  test
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`HeroCategories should render the item 1`] = `
<View
  testID="heroCategory"
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(28, 27, 31, 1)",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        Object {
          "textAlign": "left",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {
          "marginBottom": 9,
        },
      ]
    }
  >
    Test
  </Text>
  <View>
    <RCTScrollView
      data={
        Array [
          Array [
            Object {
              "image": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
              "key": "test",
              "title": "test",
            },
          ],
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={true}
      initialNumToRender={4}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      testID="heroCategoriesList"
    >
      <View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              null,
            ]
          }
        >
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Object {
                    "borderRadius": 12,
                    "marginRight": 12,
                    "padding": 4,
                  },
                ]
              }
              testID="heroItemtest"
            >
              <View>
                <Image
                  source={
                    Object {
                      "height": 97,
                      "uri": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
                      "width": 97,
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 48.5,
                    }
                  }
                />
                <Text
                  style={
                    Array [
                      Object {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontSize": 12,
                        "fontWeight": "500",
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Object {
                        "writingDirection": "ltr",
                      },
                      Object {
                        "fontWeight": "600",
                        "marginBottom": 12,
                        "marginTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  test
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
